namespace DomainModel.Enums
{
    /// <summary>
    /// Tipo de material disponible en la biblioteca
    /// </summary>
    public enum TipoMaterial
    {
        Libro,
        Manual,
        Revista
    }
}
